{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 206,
  "lineage": "bdf6250b-81cb-7fbe-240c-8fad4b2734a0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:475893214891:internet-gateway/igw-0f622cbc8a3be45da",
            "id": "igw-0f622cbc8a3be45da",
            "owner_id": "475893214891",
            "tags": {
              "Name": "Dylan-Gateway"
            },
            "tags_all": {
              "Name": "Dylan-Gateway"
            },
            "vpc_id": "vpc-0e83d64b5e201bac7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:475893214891:vpc/vpc-0e83d64b5e201bac7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "50.20.0.0/16",
            "default_network_acl_id": "acl-08c03b537e9db7b60",
            "default_route_table_id": "rtb-072f9f61ee7a4f81a",
            "default_security_group_id": "sg-0b3b8e2f8dfc66067",
            "dhcp_options_id": "dopt-064d639fd278a0ba9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e83d64b5e201bac7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-072f9f61ee7a4f81a",
            "owner_id": "475893214891",
            "tags": {
              "Name": "Dylan-VPC"
            },
            "tags_all": {
              "Name": "Dylan-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.module_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a695f0d95cefc163",
            "arn": "arn:aws:ec2:us-east-2:475893214891:instance/i-0c0141caa1960bd24",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c0141caa1960bd24",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-051e23c4cd1c6c3aa",
            "private_dns": "ip-50-20-5-183.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "50.20.5.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-090ebdf34f45841e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020f70088f165bfb4",
            "tags": {
              "Name": "Dylan_EC2_Private"
            },
            "tags_all": {
              "Name": "Dylan_EC2_Private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e850c0f893a6380e"
            ]
          },
          "dependencies": [
            "module.module_private.aws_security_group.sg_dylan",
            "module.module_private.aws_subnet.private_subnet",
            "module.module_private.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.module_private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:475893214891:route-table/rtb-0971b2bf044817c1e",
            "id": "rtb-0971b2bf044817c1e",
            "owner_id": "475893214891",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Dylan Private Table"
            },
            "tags_all": {
              "Name": "Dylan Private Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e83d64b5e201bac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a212ed5e92694b6e",
            "route_table_id": "rtb-0971b2bf044817c1e",
            "subnet_id": "subnet-020f70088f165bfb4"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.module_private.aws_route_table.private_route_table",
            "module.module_private.aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.module_private",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_dylan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:475893214891:security-group/sg-0e850c0f893a6380e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e850c0f893a6380e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_dylan_private20230408122817189500000002",
            "name_prefix": "sg_dylan_private",
            "owner_id": "475893214891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dylan Security Group"
            },
            "tags_all": {
              "Name": "Dylan Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e83d64b5e201bac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:475893214891:subnet/subnet-020f70088f165bfb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "50.20.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020f70088f165bfb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475893214891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dylan Private Subnet"
            },
            "tags_all": {
              "Name": "Dylan Private Subnet"
            },
            "vpc_id": "vpc-0e83d64b5e201bac7"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a695f0d95cefc163",
            "arn": "arn:aws:ec2:us-east-2:475893214891:instance/i-0ba3513507c4202cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba3513507c4202cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_dylan",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-056687e807a0d9a1b",
            "private_dns": "ip-50-20-18-108.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "50.20.18.108",
            "public_ip": "18.118.137.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fbc5e0ead7cfb29f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c066025d5baa863",
            "tags": {
              "Name": "Dylan_EC2_Public"
            },
            "tags_all": {
              "Name": "Dylan_EC2_Public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e304e504440841c3"
            ]
          },
          "dependencies": [
            "module.module_public.aws_security_group.sg_dylan",
            "module.module_public.aws_subnet.private_subnet",
            "module.module_public.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.module_public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:475893214891:route-table/rtb-0b1e7a4495259fd75",
            "id": "rtb-0b1e7a4495259fd75",
            "owner_id": "475893214891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f622cbc8a3be45da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dylan Public Table"
            },
            "tags_all": {
              "Name": "Dylan Public Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e83d64b5e201bac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_public",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02251cd3d82ce3bd2",
            "route_table_id": "rtb-0b1e7a4495259fd75",
            "subnet_id": "subnet-02c066025d5baa863"
          },
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_vpc.app_vpc",
            "module.module_public.aws_route_table.public_route_table",
            "module.module_public.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.module_public",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_dylan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:475893214891:security-group/sg-0e304e504440841c3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e304e504440841c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_dylan_public20230408122817186000000001",
            "name_prefix": "sg_dylan_public",
            "owner_id": "475893214891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dylan Security Group"
            },
            "tags_all": {
              "Name": "Dylan Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e83d64b5e201bac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_public",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:475893214891:subnet/subnet-02c066025d5baa863",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "50.20.18.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c066025d5baa863",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475893214891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dylan Public Subnet"
            },
            "tags_all": {
              "Name": "Dylan Public Subnet"
            },
            "vpc_id": "vpc-0e83d64b5e201bac7"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    }
  ]
}